--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse sunt necessitatibus, numquam </p>
-<p> new feature </p>
+<p> new feature (dropdown)</p>
