--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse sunt necessitatibus, numquam </p>
 <p> new feature (dropdown)</p>
 <p> new feature (button) </p>
+<p> new feature (button2) </p>
